feat: add endpoint for recent feeds
